<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.adam_currie.pizzaapp.OrderInfoActivity"
    tools:showIn="@layout/activity_order_info">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni"
        android:id="@+id/pepperoniCheckBox"
        android:layout_marginTop="37dp"
        android:checked="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olives"
        android:id="@+id/olivesCheckBox"
        android:layout_below="@+id/pepperoniCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peppers"
        android:id="@+id/peppersCheckBox"
        android:layout_below="@+id/olivesCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mushroom"
        android:id="@+id/mushroomCheckBox"
        android:layout_alignTop="@+id/pepperoniCheckBox"
        android:checked="false"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pineapple"
        android:id="@+id/pineappleCheckBox"
        android:layout_alignTop="@+id/olivesCheckBox"
        android:layout_alignLeft="@+id/mushroomCheckBox"
        android:layout_alignStart="@+id/mushroomCheckBox"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon"
        android:id="@+id/baconCheckBox"
        android:layout_below="@+id/pineappleCheckBox"
        android:layout_alignLeft="@+id/pineappleCheckBox"
        android:layout_alignStart="@+id/pineappleCheckBox"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextPage"
        android:id="@+id/orderButton"
        android:layout_marginBottom="55dp"
        android:clickable="true"
        android:onClick="onButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toppingsTitle"
        android:id="@+id/toppingsTextView"
        android:layout_above="@+id/mushroomCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sizeTitle"
        android:id="@+id/sizeTextView"
        android:layout_below="@+id/peppersCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/orderButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/sizeRadioGroup"
        android:layout_above="@+id/quantityPicker"
        android:layout_below="@+id/sizeTextView">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smallPizza"
            android:id="@+id/smallRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumPizza"
            android:id="@+id/mediumRadioButton"
            android:checked="true"
            android:enabled="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/largePizza"
            android:id="@+id/largeRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xlPizza"
            android:id="@+id/xlRadioButton"
            android:checked="false" />
    </RadioGroup>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantityPicker"
        android:layout_alignTop="@+id/backFromOrderButton"
        android:layout_toLeftOf="@+id/backFromOrderButton"
        android:layout_toStartOf="@+id/backFromOrderButton"
        android:layout_alignBottom="@+id/backFromOrderButton"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/quantityTitle"
        android:id="@+id/quantityText"
        android:layout_alignTop="@+id/quantityPicker"
        android:layout_toLeftOf="@+id/quantityPicker"
        android:layout_toStartOf="@+id/quantityPicker"
        android:layout_marginTop="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevPage"
        android:id="@+id/backFromOrderButton"
        android:layout_alignBottom="@+id/orderButton"
        android:layout_toLeftOf="@+id/orderButton"
        android:layout_toStartOf="@+id/orderButton" />

</RelativeLayout>
