<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.adam_currie.pizzaapp.ConfirmActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevPage"
        android:id="@+id/backFromConfirmButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/confirmButton"
        android:layout_toStartOf="@+id/confirmButton" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2"
        android:layout_above="@+id/confirmButton"
        android:id="@+id/priceTable">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/itemTitle"
                android:layout_weight="1"
                android:id="@+id/itemText"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/priceTitle"
                android:layout_weight="1"
                android:id="@+id/PriceText"
                android:layout_column="0" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveReceipt"
        android:id="@+id/saveReceiptButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/backFromConfirmButton"
        android:layout_toStartOf="@+id/backFromConfirmButton" />
</RelativeLayout>
